--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -244,7 +244,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
-                                android:text="Generate QR Code"
+                                android:text="Transaksi"
                                 android:padding="5dp"
                                 android:textStyle="bold"
                                 android:textColor="@android:color/darker_gray"/>
