--- a/app/src/main/res/layout/activity_detailscan.xml
+++ b/app/src/main/res/layout/activity_detailscan.xml
@@ -7,133 +7,180 @@
     <!--    tools:context="${relativePackage}.${activityClass}"-->
 
     <LinearLayout
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center">
+        android:background="@color/colorPrimaryDark"
+        android:padding="10dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Jenis Sampah: "
-            android:textColor="@color/lbl_name"/>
+            android:text="Tinjau dan Konfirmasi"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="8pt"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/rounded_border_edittext"
+        android:layout_margin="10dp"
+        android:padding="20dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Jenis Sampah"
+            android:textSize="12pt"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
+            android:paddingLeft="20dp"/>
 
         <TextView
             android:id="@+id/jenisSampah"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:paddingLeft="20dp"
-            android:textStyle="bold"
-            android:textColor="@color/lbl_name"
-            android:text="j"/>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center">
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Harga Sampah: "
-            android:textColor="@color/lbl_name"/>
+            android:paddingLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:textStyle="bold"
+            android:layout_alignParentRight="true"
+            android:textColor="@color/colorPrimaryDark"
+            android:text="Kertas"/>
 
         <TextView
             android:id="@+id/hrgSampah"
-            android:layout_width="200dp"
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
             android:paddingLeft="20dp"
             android:textStyle="bold"
-            android:textColor="@color/lbl_name"
-            android:text="g"/>
+            android:textColor="@color/colorPrimaryDark"
+            android:text="1200 /Kg"/>
+
     </LinearLayout>
+
     <LinearLayout
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center">
+        android:orientation="vertical"
+        android:background="@drawable/rounded_border_edittext"
+        android:layout_margin="10dp"
+        android:padding="20dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Berat Sampah: "
-            android:textColor="@color/lbl_name"/>
-
-        <TextView
-            android:id="@+id/beratSampah"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:paddingLeft="20dp"
+            android:text="Detail Transaksi"
+            android:textSize="12pt"
+            android:textColor="@color/colorPrimaryDark"
             android:textStyle="bold"
-            android:textColor="@color/lbl_name"
-            android:text="g"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Poin Sampah: "
-            android:textColor="@color/lbl_name"/>
+            android:paddingLeft="20dp"/>
 
-        <TextView
-            android:id="@+id/poinSampah"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:paddingLeft="20dp"
-            android:textStyle="bold"
-            android:textColor="@color/lbl_name"
-            android:text="g"/>
+        <RelativeLayout
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tanggal"
+                android:paddingLeft="20dp"
+                android:textColor="@color/colorPrimaryDark"/>
+
+            <TextView
+                android:id="@+id/tanggalTS"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="20dp"
+                android:textStyle="bold"
+                android:layout_alignParentRight="true"
+                android:textColor="@color/colorPrimaryDark"
+                android:text="2020-05-01"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Waktu"
+                android:paddingLeft="20dp"
+                android:textColor="@color/colorPrimaryDark"/>
+
+            <TextView
+                android:id="@+id/waktuTS"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="20dp"
+                android:textStyle="bold"
+                android:layout_alignParentRight="true"
+                android:textColor="@color/colorPrimaryDark"
+                android:text="10:05 WIB"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Berat Sampah"
+                android:paddingLeft="20dp"
+                android:textColor="@color/colorPrimaryDark"/>
+
+            <TextView
+                android:id="@+id/beratSampah"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="20dp"
+                android:textStyle="bold"
+                android:layout_alignParentRight="true"
+                android:textColor="@color/colorPrimaryDark"
+                android:text="3000 g"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:text="Poin Sampah: "
+                android:textColor="@color/colorPrimaryDark"/>
+
+            <TextView
+                android:id="@+id/poinSampah"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:paddingRight="20dp"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark"
+                android:text="3600 poin"/>
+        </RelativeLayout>
     </LinearLayout>
 
-    <LinearLayout
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
 
         <Button
-            android:layout_width="100pt"
+            android:layout_width="match_parent"
+            android:layout_margin="10dp"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:background="@color/colorPrimary"
-            android:text="OK"
+            android:text="Konfirmasi"
             android:onClick="simpanTransaksiBuang"
             android:textColor="@color/white" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/batal"
-            android:layout_width="100pt"
-            android:layout_height="wrap_content"
-            android:background="@color/btn_logut_bg"
-            android:text="BATAL"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:onClick="tombolBatal"
-            android:textSize="15dp" />
-
-    </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
