--- a/app/src/main/res/layout/activity_detailtukarpoin.xml
+++ b/app/src/main/res/layout/activity_detailtukarpoin.xml
@@ -6,134 +6,155 @@
     tools:context=".activity.DetailTukarPoinActivity">
 
     <LinearLayout
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center">
+        android:background="@color/colorPrimaryDark"
+        android:padding="10dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Penjual: "
-            android:textColor="@color/lbl_name"/>
-
-        <TextView
-            android:id="@+id/idPenjual"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:paddingLeft="20dp"
+            android:text="Tinjau dan Konfirmasi"
+            android:textColor="@color/white"
             android:textStyle="bold"
-            android:textColor="@color/lbl_name"
-            android:text="id penjual"/>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Produk: "
-            android:textColor="@color/lbl_name"/>
-
-        <TextView
-            android:id="@+id/idProduk"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:paddingLeft="20dp"
-            android:textStyle="bold"
-            android:textColor="@color/lbl_name"
-            android:text="id produk"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Harga "
-            android:textColor="@color/lbl_name"/>
-
-        <TextView
-            android:id="@+id/idHarga"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:paddingLeft="20dp"
-            android:textStyle="bold"
-            android:textColor="@color/lbl_name"
-            android:text="Rp."/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Poin yang dibutuhkan "
-            android:textColor="@color/lbl_name"/>
-
-        <TextView
-            android:id="@+id/idPoinTukar"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:paddingLeft="20dp"
-            android:textStyle="bold"
-            android:textColor="@color/lbl_name"
-            android:text="poin"/>
+            android:textSize="8pt"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:layout_margin="10dp"
+        android:padding="20dp"
+        android:background="@drawable/rounded_border_edittext">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Poin "
+            android:textSize="8pt"
+            android:textColor="@color/colorPrimaryDark"/>
+        <TextView
+            android:id="@+id/poinsaatini"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="7342"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:textSize="10pt"
+            android:textColor="@color/colorPrimaryDark"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="20dp"
+        android:background="@drawable/rounded_border_edittext"
+        android:layout_margin="10dp">
+
+
+            <TextView
+                android:id="@+id/idPenjual"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="20dp"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="12pt"
+                android:text="id penjual"/>
+
+            <TextView
+                android:id="@+id/idProduk"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="20dp"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark"
+                android:text="id produk"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_border_edittext"
+        android:padding="20dp"
+        android:layout_margin="10dp"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Detail Transaksi"
+            android:textSize="12pt"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
+            android:paddingLeft="20dp"/>
+
+        <RelativeLayout
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:paddingLeft="20dp"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Total Harga"
+                android:textColor="@color/colorPrimaryDark"/>
+
+            <TextView
+                android:id="@+id/idHarga"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_alignParentRight="true"
+                android:paddingRight="20dp"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark"
+                android:text="Rp.10000"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Total Poin"
+                android:textColor="@color/colorPrimaryDark"
+                android:paddingLeft="20dp"/>
+
+            <TextView
+                android:id="@+id/idPoinTukar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:paddingRight="20dp"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark"
+                android:text="10000 poin"/>
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <Button
             android:id="@+id/btnBayar"
-            android:layout_width="100pt"
+            android:layout_width="match_parent"
+            android:layout_margin="10dp"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:text="Bayar"
+            android:layout_alignParentBottom="true"
+            android:background="@color/colorPrimaryDark"
+            android:text="Konfirmasi"
             android:onClick="simpanTransaksiTukar"
             android:textColor="@color/white" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/batal"
-            android:layout_width="100pt"
-            android:layout_height="wrap_content"
-            android:background="@color/btn_logut_bg"
-            android:text="BATAL"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:onClick="tombolBatal"
-            android:textSize="15dp" />
-
-    </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
