--- a/app/src/main/res/layout/activity_detail_tugas.xml
+++ b/app/src/main/res/layout/activity_detail_tugas.xml
@@ -171,8 +171,9 @@
         android:layout_marginTop="10dp">
         <Button
             android:id="@+id/selesai_button"
+            android:visibility="visible"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:text="SELESAI"
             android:background="@color/colorPrimaryDark"
             android:textColor="@color/white"
