penambahan detail riwayat jemput sampah user

--- a/app/src/main/res/layout/activity_detail_tugas.xml
+++ b/app/src/main/res/layout/activity_detail_tugas.xml
@@ -21,10 +21,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/rounded_border_edittext"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
+        android:padding="20dp"
         android:orientation="vertical">
         <TextView
             android:layout_width="wrap_content"
@@ -39,14 +36,6 @@
             android:layout_height="wrap_content"
             android:id="@+id/namaPJS"
             android:text="nama"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="8pt"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/notelpPJS"
-            android:text="nohp"
-            android:layout_marginTop="8pt"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="8pt"/>
 
@@ -131,6 +120,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/callUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
