--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#3b3bff</color>
     <color name="colorPrimaryDark">#2A3B80</color>
     <color name="colorAccent">#0000FF</color>
+    <color name="colorTolak">#F08080</color>
+
 
     <color name="bg_login">#26ae90</color>
     <color name="bg_register">#2e3237</color>
@@ -19,4 +21,5 @@
     <color name="btn_logut_bg">#ff6861</color>
 
     <color name="black">#000</color>
+    <color name="red">#FF0000</color>
 </resources>
