--- a/app/src/main/res/layout/content_main_riwayat.xml
+++ b/app/src/main/res/layout/content_main_riwayat.xml
@@ -21,6 +21,7 @@
         android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewRiwayat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -31,7 +32,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="20dp">
 
             <TextView
                 android:id="@+id/namaFitur"
@@ -48,6 +50,15 @@
                 android:layout_below="@id/namaFitur"
                 android:layout_marginLeft="3dp"
                 android:text="yyyy-MM-dd"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/jamTP"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tanggal"
+                android:layout_marginLeft="3dp"
+                android:text="HH:mm:ss"
                 android:textSize="18dp" />
 
 
