merubah tampilan gambar total penghasilan merchant

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -394,6 +394,7 @@
                         app:cardCornerRadius="12dp">
 
                         <LinearLayout
+                            android:id="@+id/gambartotalsampah"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:orientation="vertical"
