ganti password di profil

--- a/app/src/main/res/layout/popup_passwordprofil.xml
+++ b/app/src/main/res/layout/popup_passwordprofil.xml
@@ -7,15 +7,6 @@
     android:padding="5dp"
     android:layout_gravity="center">
 
-
-    <EditText
-        android:id="@+id/passLama"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:textStyle="bold"
-        android:hint="Password Lama"
-        android:textColor="@color/colorPrimaryDark"/>
     <EditText
         android:id="@+id/passBaru"
         android:layout_width="match_parent"
@@ -23,6 +14,7 @@
         android:layout_gravity="center_vertical"
         android:textStyle="bold"
         android:hint="Password Baru"
+        android:inputType="textPassword"
         android:textColor="@color/colorPrimaryDark"/>
     <EditText
         android:id="@+id/UlangiPassBaru"
@@ -30,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:textStyle="bold"
+        android:inputType="textPassword"
         android:hint="Ulangi Password Baru"
         android:textColor="@color/colorPrimaryDark"/>
 
