--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -163,6 +163,7 @@
                 android:background="@layout/rounded_border_edittext"
                 android:paddingLeft="20dp"
                 android:paddingTop="8dp"
+                android:maxLength="8"
                 android:inputType="textPassword"
                 android:paddingBottom="8dp"
                 android:text="password"
