--- a/app/src/main/res/layout/activity_detail_riwayat_tp.xml
+++ b/app/src/main/res/layout/activity_detail_riwayat_tp.xml
@@ -31,7 +31,7 @@
 
         <TextView
             android:id="@+id/idPenjual"
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:paddingLeft="20dp"
@@ -42,7 +42,7 @@
 
         <TextView
             android:id="@+id/idProduk"
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:paddingLeft="20dp"
